# wandb_testing

./: pyproject.toml
wandb/: latest-run
wandb/run-20230328_033923-zsgozlrs/: run-zsgozlrs.wandb
wandb/run-20230328_033923-zsgozlrs/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
